Trivial changes to account for ReduceIntent in code handling all uAST nodes
Signed-off-by: Ben Harshbarger <ben.harshb@gmail.com>

--- a/compiler/dyno/lib/uast/CMakeLists.txt
+++ b/compiler/dyno/lib/uast/CMakeLists.txt
@@ -90,6 +90,7 @@ target_sources(libdyno-obj
                RealLiteral.cpp
                Record.cpp
                Reduce.cpp
+               ReduceIntent.cpp
                Require.cpp
                Return.cpp
                Scan.cpp
