--- a/compiler/dyno/lib/uast/Makefile.include
+++ b/compiler/dyno/lib/uast/Makefile.include
@@ -93,6 +93,7 @@ DYNO_UAST_SRCS =                                 \
   RealLiteral.cpp \
   Record.cpp \
   Reduce.cpp \
+  ReduceIntent.cpp \
   Require.cpp \
   Return.cpp \
   Scan.cpp \
